:lipstick: feat: fixing the centering and removing horizontal scroll

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -217,6 +217,7 @@ h6 {
 .clock {
   width: var(--clock-length);
   aspect-ratio: 1;
+  overflow: hidden;
   box-shadow:
     .5rem .5rem 1rem .25rem var(--shadow-effect-color),
     -.5rem -.5rem 1rem .5rem var(--light-effect-color),
